--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "kauppvi",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
